--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,3 @@
-/* noto-sans link */
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-/* noto-sans-css */
-font-family: 'Noto Sans KR', sans-serif;
-/*  */
-
 *{
 	margin: 0;
 	padding: 0;
@@ -30,14 +22,16 @@ font-family: 'Noto Sans KR', sans-serif;
 	height: max-content;
 	display: flex;
 }
-.container-r{
+.con-r{
 	width:20vw;
 	height: 100vh;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	align-items: center;
+	background-color: var(--lg);
 }
-.container-c{
+.con-c{
 	width: 20vw;
 	height: 100vh;
 	display: flex;
