--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 *{
 	margin: 0;
 	padding: 0;
+}
+body{
+	font-family: 'Noto Sans KR', sans-serif;
 }
 :root{
 	--g:gray;
@@ -29,7 +35,7 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	background-color: var(--lg);
+	background-color: var(--g);
 }
 .con-c{
 	width: 20vw;
@@ -37,4 +43,17 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
+	background-color: var(--g);
+
+}
+.box{
+	width: 15vw;
+	height: 5vh;
+	background-color:var(--lg);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 1vh;
+	border-radius: 1vw;
 }
