noto sans font apply

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+@font-face {
+font-family: 'Noto Sans KR', sans-serif;
+src: url(https://fonts.google.com/noto/specimen/Noto+Sans+KR?subset=korean);
+}
 
-body{
-	font-family: 'Noto Sans KR', sans-serif;}
+body
+{	font-family: 'Noto Sans KR', sans-serif;}
 
 	*{padding: 0;
 	margin: 0;}
@@ -69,5 +70,5 @@ body{
 	justify-content: center;
 	align-items: center;
 	border-radius:1vw;
-	color:var(--fa)
+	color:var(--fa);
 }
