--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,10 @@ body
 	--08:#080808;
 	--fa:#fafafa;
 	--cy:#ffbb09;
-	/* 참깨 UI에 사용하기로 한 대표 3가지 색이다. 양극의 명도값은 사용하지 않았고, 간격은 조정했다.
-	'CharmggaeYellow' 라고 가제로 정했던 노란색 계열의 색도 넣긴했는데 색 그냥 안쓸 계획이다.*/
+	--tt:transparent;
+
+	/* 참깨 UI에 사용하기로 한 대표 3가지 색이다. 양극의 명도값은 사용하지 않았고, 명도의 간격을 안쪽으로 조정했다.
+	'CharmggaeYellow' 라고 가제로 정했던 노란색 계열의 색도 넣긴했는데 무채색 계열로만 앱 서비스를 꾸밀 계획이다.*/
 }
 /* 높이를 viewport 100으로 쓰는 root div */
 #root-1{
