--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	background-color: var(--g);
+	background-color: var(--fa);
 }
 /* direction-column , container div */
 
@@ -54,7 +54,7 @@ body
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: var(--g);
+	background-color: var(--fa);
 
 }
 .b-box{
