--- a/css/style.css
+++ b/css/style.css
@@ -177,9 +177,25 @@ background-color: var(--dig);
 	margin-right: 1vw;
 	border-radius:20%;
 }
+.s-img-2{
+	width: 4vw;
+	height: 4vw;
+	background-color: var(--lg);
+	margin-left: 1vw;
+	margin-right: 1vw;
+	border-radius:20%;
+}
 .s-img-layout{
 	width: 8vw;
 	height: 8vw;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.s-img-layout-2{
+	width: 6vw;
+	height: 6vw;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
